src/test/deca/context/invalid/provided/double_declare_param.deca
class A {
  int x = 0;
  void setX(int x, float x) {this.x = x;}
}
